[gd_scene load_steps=4 format=2]

[ext_resource path="res://obj.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.9305, 14.9258 )

[node name="obj" type="Area2D"]
position = Vector2( 92.3772, 45.7355 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.980392, 0.980392, 0.980392, 1 )
scale = Vector2( 0.529472, 0.529472 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_obj_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_obj_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_obj_mouse_exited"]
